# BIG-DATA-project

./: .env  .gitignore  BIG_DATA_project.ipynb  README.md  config.yaml  pyproject.toml  requirements.txt  run_analysis.py
assets/: services_importance.csv
colab/: urban_services_analysis_improved_V2.ipynb
data/: raw_pois.parquet
output/: city_comparison.csv  services_h3_aggregated.csv
src/: __init__.py  analytics.py  config.py  data_loader.py  elasticsearch_integration.py  example_usage.py  main.py  p.py  spark_processor.py  visualization.py
