[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-services-analysis"
version = "2.0.0"
description = "Urban services accessibility analysis using PySpark and H3 spatial indexing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "BIG-DATA-project team"}
]
keywords = ["urban-planning", "pyspark", "h3", "geospatial", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "pyspark>=3.4.0",
    "osmnx>=1.6.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "h3>=3.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "keplergl>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
urban-services = "src.main:main"

[project.urls]
Homepage = "https://github.com/mark76jx17/BIG-DATA-project-"
Repository = "https://github.com/mark76jx17/BIG-DATA-project-"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
